# elfloader3-linux

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  api.h  debug.c  elf.h  env.c  env.h  fix.c  fix.h  gdb.sh  libuv.cmake  loadelf.c  loader.c  loader.h  loadlib.c  log.c  main.c  rt.c  toolchain.cmake
common/: IpcProto.h
host-helper/: .gitignore  CMakeLists.txt
host-helper/src/: AppWindow.cpp  AppWindow.h  KeyCodes.cpp  main.cpp
overrides/swilib/: socket.h
res/ELKA/: 0.font  1.font  10.font  11.font  2.font  3.font  4.font  5.font  6.font  7.font  8.font  9.font  E1XX.json
res/NSG/: 0.font  1.font  10.font  11.font  12.font  13.font  14.font  15.font  16.font  2.font  3.font  4.font  5.font  6.font  7.font  8.font  9.font  E1XX.json
rootfs/ELKA/Cache/default/: apidc_setup.pd  setup.pd  userprofiles.pd
rootfs/ELKA/Cache/efault/: frdb.pd  mediaplayer.pd  mymenu.pd  soundrecorder.pd  vibralight.pd
rootfs/ELKA/Config/: ccq_vinfo.txt
rootfs/ELKA/Config/DRM/pre_inst/: t9de.drc  t9et.drc  t9lt.drc  t9lv.drc  t9tr.drc  t9uk.drc
rootfs/ELKA/Config/Default/: AlarmMelody.aac  AppointmentMelody.aac  CallMelody.aac  ColorControls.col  MessageMelody.aac
rootfs/ELKA/Config/Default/MagicLink/: MagicLinks.xml
rootfs/ELKA/Config/Default/Mystuff/: mystuff.xml
rootfs/ELKA/Config/Default/PD/: apidc_setup.pd  avatar.pd  bookmark.pd  ctxinit-003.pd  ctxinit-004.pd  ctxinit-005.pd  ctxinit-006.pd  ctxinit-007.pd  ctxinit-008.pd  fak.pd  regwiz.pd  setup.pd  sml_root_acl.pd  stopwatch.pd  userprofiles.pd  vibralight.pd  worldclock.pd
rootfs/ELKA/Config/Policy/: thirdparty.sbp
rootfs/ELKA/Config/Vibra&Light/Patterns/: Mosquito.seff  Train.seff  Ufo.seff
rootfs/ELKA/Config/ctxinit/: ctxinit-001.wbxml  ctxinit-003.wbxml  ctxinit-004.wbxml
rootfs/ELKA/Config/ims/audio/: FloorDenied.mid  IMReceived.mid  IPAlertReceived.mid  PresenceStatusCh_Rx.mid  RingingIncoming.mid  WatcherAuthRequest.mid
rootfs/ELKA/Config/jamos/: jamosBeanRegistry.txt
rootfs/ELKA/Config/japp/FlexMenu/: extras.fs  flexmenu.properties  internet.fs  messages.fs  msg_settings.fs  set_accessories.fs  set_con_faxdata.fs  set_connectivity.fs  set_display.fs  set_network.fs  set_pho_filesystem.fs  set_phonesettings.fs  set_ring_calls.fs  set_ring_messages.fs  set_ringtones.fs  set_security.fs  set_shortcuts.fs
rootfs/ELKA/Data/Applications/Blog2Go/: Blog2Go.jad
rootfs/ELKA/Data/Applications/Download Assistant/: Download Assistant.jad
rootfs/ELKA/Data/Applications/Mobipocket Reader/: Mobipocket Reader.jad
rootfs/ELKA/Data/Applications/PhotoEditor/: PhotoEditor.jad
rootfs/ELKA/Data/Games/Brick Challenge/: Brick Challenge.jad
rootfs/ELKA/Data/Games/NY Nights/: NY Nights.jad
rootfs/ELKA/Data/Sounds/: This time.aac
rootfs/ELKA/Data/Sounds/ProSlide/: Signal Close.MID  Signal Open.MID
rootfs/ELKA/Data/Themes/: DeepBlue.sdt
rootfs/ELKA/Data/Videos/: Moon.3gp  Rio de Janeiro.3gp  Turtle.3gp
rootfs/NSG/Cache/default/: apidc_setup.pd  developer_menu.pd  fak.pd  frdb.pd  mediaplayer.pd  setup.pd  soundrecorder.pd  userprofiles.pd  vibralight.pd
rootfs/NSG/Config/: ccq_vinfo.txt
rootfs/NSG/Config/Certificate store/: S_TTPD_RCA.der
rootfs/NSG/Config/Default/: ColorControls.col  MessageMelody.aac
rootfs/NSG/Config/Policy/: manufacturer.sbp
rootfs/NSG/Config/ctxinit/: ctxinit-000.wbxml  ctxinit-001.wbxml  ctxinit-002.wbxml  ctxinit-003.wbxml  ctxinit-004.wbxml
rootfs/NSG/Data/Themes/: LoungeLight.sdt  Surge.sdt  Viridescence.sdt
rootfs/NSG/Data/Videos/: Basketball.3gp  Moon.3gp  Turtle.3gp  Ukulele.3gp
rootfs/SG/Config/: ccq_vinfo.txt
rootfs/SG/Config/Default/: IncomingCallMelody.mid  PTTRingToneMelody.mid  SkinScheme.col
rootfs/SG/Config/Policy/: thirdparty.sbp
rootfs/SG/Data/Sounds/: AnswerThis.srt  Krazy.srt  Popsicle.srt  Ring.srt  SilentMovie.srt
rootfs/SG/Data/Themes/: Blue abstract.sdt  Cosmos.sdt  Desert.sdt  Siemens mobile.sdt
rootfs/SG/Data/Videos/: Paris.3gp
rootfs/X75/Config/: ccq_vinfo.txt
rootfs/X75/Config/Certificate store/: GT_UTI_RCA.der  S_MD_RCA.der  space2go.der
rootfs/X75/Config/Default/: SkinScheme.col  bookmark.pd  browser.pd  rcconfig.pd  test_sweep.aac
rootfs/X75/Config/Policy/: manufacturer.sbp
rootfs/X75/Config/ims/: profile.pd
rootfs/X75/Data/Themes/: Geometric blue.sdt  Impulse star.sdt  Siemens.sdt
rootfs/X75/Data/Videos/: Rio de Janeiro.3gp
src/: BinaryStream.cpp  FFS.cpp  FFS.h  IPC.cpp  IPC.h  Loop.cpp  Loop.h  Resources.cpp  Resources.h  SieFs.cpp  SieFs.h  charset.cpp  charset.h  glue.cpp  log.h  main.c  main.cpp  main.h  main2.cpp  stubs.cpp  stubs.h  swi.cpp  swi.h  utils.cpp  utils.h
src/elfloader/: debug.c  debug.h  elf.h  env.c  env.h  loadelf.c  loader.c  loader.h  loadlib.c  log.c
src/gui/: Bitmap.h  Font.h  MaskPainter.cpp  MaskPainter.h  Painter.cpp  Painter.h  Theme.cpp  Theme.h
src/io/: Loop.cpp  Loop.h
src/swi/: const.cpp  csm.cpp  csm.h  date.cpp  explorer.cpp  explorer.h  file.cpp  fs.cpp  gbs.cpp  gbs.h  gui.cpp  gui.h  helper.cpp  image.cpp  image.h  images.cpp  info.cpp  info.h  init.cpp  init.h  libc.cpp  ll.cpp  ll.h  lock.cpp  mmi.cpp  nucleus.cpp  obs.cpp  openssl.cpp  settings.cpp  sys.cpp  system.cpp  time.cpp  utils.cpp  ws.cpp  ws_printf.cpp  ws_printf.h  wstring.cpp  wstring.h
src/swi/gbs/: MOPIProcessGroup.cpp  MOPIProcessGroup.h
src/swi/gui/: TextRender.cpp  TextRender.h  drwobj.cpp  font.cpp  lcdlayer.cpp  painter.cpp  utils.cpp
src/swi/proc/: helper.cpp  helper.h  mmi.cpp  mmi.h
src/swilib/: jumpers.S  swihook.cpp  switab-stubs.cpp  switab.c  switab.h
src/utils/: BinaryStream.cpp  BinaryStream.h  cast.h  charset.cpp  charset.h  fs.cpp  fs.h  stb.cpp  string.cpp  string.h  time.cpp  time.h
tools/: enc.php  keys.php
(+338 files in other folders)
